--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 
 body {
     font-family: 'Open Sans', sans-serif;
@@ -91,4 +91,117 @@ header nav a:last-child {
 
 .header-logo-col {
     margin-top: 51px;
+}
+
+.main-item {
+    display: flex;
+    flex-direction: column;
+    background-color: #f2f2f2;
+    border: 1px solid #979797;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    margin-top: 49px;
+    margin-bottom: 50px;
+}
+.main-item-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.main-item-img {
+    width: 183px;
+    height: 284px;
+    margin-bottom: 36px;
+}
+.main-item-heading {
+    font-size: 36px;
+    color: #3d3d3d;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+}
+.main-item-price {
+    font-size: 20px;
+    color: #797979;
+    text-transform: uppercase;
+    margin-bottom: 35px;
+}
+
+.main-item-btn {
+    width: 100%;
+    border: 1px solid #3d3d3d;
+    padding: 15px 0;
+    text-align: center;
+    background-color: #f2f2f2;
+    color: #3d3d3d;
+    font-size: 20px;
+    transition: 0.2s;
+}
+
+.main-item-btn:hover {
+    cursor: pointer;
+    background-color: #6E6E6E;
+    color: white;
+    transition: 0.2s;
+}
+
+.main-item-btn-dark {
+    background-color: #3d3d3d;
+    border: solid 1px #979797;
+    color: #b9b9b9;
+    transition: 0.2s;
+}
+
+.card {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  border: 1px solid #979797;
+  padding: 22px;
+  margin-bottom: 20px;
+}
+
+.card-img {
+  width: 138px;
+  height: 200px;
+  margin-bottom: 30px;
+  display: flex;
+  align-self: center;
+}
+
+.card-heading {
+  font-size: 16px;
+  color: #3d3d3d;
+  margin-bottom: 20px;
+}
+
+.card-description {
+  color: #878787;
+  line-height: normal;
+}
+
+.card-price {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #3d3d3d;
+    padding: 40px 0;
+    color: #ffffff;
+}
+
+.footer-links {
+    margin-bottom: 20px;
+}
+
+.footer-links a {
+  color: #ffffff;
+  margin-right: 30px;
+}
+
+.footer-links a:last-child {
+  margin-right: 0;
 }
