--- a/Styles/style.css
+++ b/Styles/style.css
@@ -12,8 +12,10 @@ body {
 .row {
   display: flex;
   flex-wrap: wrap;
+/*
   margin-left: -10px;
-  margin-right: -10px;
+  margin-right: 10px;
+*/
 }
 
 .col-1 {
@@ -278,6 +280,7 @@ footer {
     margin-top: 30px;
     }
     
+    
 }
 
 @media(max-width: 768px) {
@@ -331,13 +334,17 @@ footer {
     
     .desc {
     align-content: center;
-    margin-left: 150px;
+    margin-left: 50px;
     margin-top: 30px;
     }
 
 }
 
 @media(max-width: 768px) {
+    .container {
+    padding: 10px;
+  }
+    
     header nav {
         display: flex;
         flex-direction: column;
@@ -372,10 +379,11 @@ footer {
 
 .desc {
     flex-direction: column;
+    margin-left: 30px;
 }
 
 .item-description {
-    margin-right: 200px;
+    max-width: 350px;
     margin-top: 0px;
     line-height: 1.5;
 }
@@ -393,7 +401,7 @@ h2 {
 li {
     margin-top: 18px;
     text-align: left;
-    width: 480px;
+    width: 260px;
     height: 24px;
     font-size: 14px;
 }
@@ -488,6 +496,7 @@ a {
 }
 
 .social-btns {
+    max-width: 100%;
     justify-content: space-between;
     margin-bottom: 50px;
 }
