card hover animation

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -169,6 +169,14 @@ header nav a:last-child {
     background-color: #F5F5F5;
     padding: 22px;
     margin-bottom: 20px;
+    transition: 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 22px 43px rgba(0,0,0,0.15);
+    transition: 0.3s;
+    transform: translateY(-5px);
+    cursor: pointer;
 }
 
 .card-img {
